fix: delete @annotation & change Collector to ToList